syntax = 'proto3';

package customer;

service CustomersService {
  rpc Find (ProductId) returns (Recipe) {};
  rpc GetAllNews (Empty) returns (NewsList) {};
}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

message Empty {}

message NewsList {
   repeated News news = 1;
}

message ProductId {
  uint32 id = 1;
}

message Recipe {
  uint32 id = 1;
  string title = 2;
  string notes = 3;
}